[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Characters/guard.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Characters/Enemies/Guard.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.49814
height = 18.326

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Shoot_E"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Shoot_W"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Shoot_E"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Shoot_W"

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachineTransition" id=9]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=12]
states/Idle/node = SubResource( 5 )
states/Idle/position = Vector2( 607, 105 )
states/Shoot_E/node = SubResource( 6 )
states/Shoot_E/position = Vector2( 783, 105 )
states/Shoot_W/node = SubResource( 7 )
states/Shoot_W/position = Vector2( 449, 105 )
transitions = [ "Idle", "Shoot_W", SubResource( 8 ), "Shoot_W", "Idle", SubResource( 9 ), "Idle", "Shoot_E", SubResource( 10 ), "Shoot_E", "Idle", SubResource( 11 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=13]

[sub_resource type="CircleShape2D" id=14]
radius = 424.3

[node name="Guard" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )
hframes = 3
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Shoot_E = SubResource( 3 )
anims/Shoot_W = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 13 )

[node name="ShootCD" type="Timer" parent="."]

[node name="ChangeState" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
self_modulate = Color( 0.0352941, 1, 0.027451, 1 )
margin_left = 0.25
margin_top = -60.75
margin_right = 40.25
margin_bottom = -46.75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 14 )

[connection signal="timeout" from="ShootCD" to="." method="_on_ShootCD_timeout"]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
